--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,12 @@
-title: Atlas Jekyll Theme
+title: Hongyiel Suh
 desciption: >
-  A jekyll theme for personal website.
+  My blog.
 email: yourusername@gmail.com
 baseurl: "/atlas-jekyll-theme" # the subpath of your site, e.g. /blog
 #replace nrdybhu1.github.io with your domainname.com
-url: "https://nrdybhu1.github.io" # the base hostname & protocol for your site
-twitter_username: jekyllrb
-github_username:  Jekyll
+url: "https://Hongyiel.github.io" # the base hostname & protocol for your site
+twitter_username: Hongyiel
+github_username:  Hongyiel
 markdown: kramdown
 page_excerpts: true
 favicon: "/img/atlas.png"
